--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
   "bugs": {
     "url": "https://github.com/IAmCellist/interactive-demo/issues"
   },
-  "homepage": "https://github.com/IAmCellist/interactive-demo#readme",
+  "homepage": "https://iamcellist.github.io/interactive-demo/",
   "description": ""
 }
